Native-Image with FFM API